...
            borderRadius={"8px"}
            backgroundColor="darkBlue.50"
            borderColor={"darkBlue.500"}
            style={styles.badge}
            borderWidth={"2px"}
            borderStyle={"dashed"}
            testID="addNewTagButton"
        >
            <HStack space={"10px"} alignItems={"center"}>
                <Text size={"subheadline"} fontWeight={"semibold"} color={"darkBlue.500"}>
                    Add
                </Text>
                <FontAwesomeIcon icon={farPlus} size={14} color="#0077E6" />
...
