...
        (isIncomingTransaction && transaction.contactOut?.contactName) ||
        (!isIncomingTransaction && transaction.contactIn?.contactName) ||
        formatAddress(transaction.transactionAddress);

    return (
        <Pressable
            testID={"transactionsListItem"}
            onPress={() =>
                navigation.navigate("TransactionDetailsScreen", {
                    title: getFormattedDate(transaction.createdAt as any),
                    transaction: transaction,
                    wallet,
                })
...
