...
                })}
            />
            <HomeStack.Screen
                name="TransactionTagsScreen"
                component={TransactionTagsScreen}
                options={{
                    title: "Tags",
                    headerTintColor: "#404040",
                    headerTitleStyle: {
                        fontSize: 17,
                        fontWeight: "600",
                    },
                    headerShadowVisible: false,
...
                }}
            />
            <HomeStack.Screen
                name="FilterTagScreen"
                component={FilterTagScreen}
                options={{
                    title: "Filter by Tag",
                    headerTintColor: "#404040",
                    headerTitleStyle: {
                        fontSize: 17,
                        fontWeight: "600",
                    },
                    headerShadowVisible: false,
...
                }}
            />
            <SettingsStack.Screen
                name="NotificationsScreen"
                component={NotificationsScreen}
                options={{
                    title: "Notifications",
                    headerTintColor: "#404040",
                    headerTitleStyle: {
                        fontSize: 17,
                        fontWeight: "600",
                    },
                    headerShadowVisible: false,
...
                }}
            />
            <SettingsStack.Screen
                name="AccountPasswordScreen"
                component={AccountPasswordScreen}
                options={{
                    title: "Change Password",
                    headerTintColor: "#404040",
                    headerTitleStyle: {
                        fontSize: 17,
                        fontWeight: "600",
                    },
                    headerShadowVisible: false,
...
            <BottomTab.Screen
                name="HomeStack"
                component={HomeStackScreen}
                options={{
                    title: "Home",
                    tabBarIcon: tabBarIcon(fasHouse),
                    tabBarTestID: "homeTab",
                }}
            />
            <BottomTab.Screen
                name="SettingsStack"
                component={SettingsStackScreen}
                options={{
                    title: "Settings",
                    tabBarIcon: tabBarIcon(fasBars),
                    tabBarTestID: "settingsTab",
                }}
            />
        </BottomTab.Navigator>
    );
}

...
