...
export default function TransactionDetailsActionSheet({ wallet, navigation, transaction }: Props) {
    const isIncomingTransaction = wallet.address == transaction.walletIn;

    const { isOpen, onOpen, onClose } = useDisclose();
    return (
        <>
            <Pressable onPress={onOpen} style={{ paddingRight: 4.5 }} testID="transactionOptionsButton">
                <FontAwesomeIcon icon={farEllipsis} size={22} />
            </Pressable>
            <Actionsheet isOpen={isOpen} onClose={onClose}>
                <Actionsheet.Content paddingBottom={"15px"}>
                    <Text fontWeight={"semibold"} style={styles.headerStyle} marginX={"auto"}>
                        Options
...
                                navigation.navigate("ContactsListScreen", {
                                    prefilledWalletAddress: isIncomingTransaction
                                        ? transaction.walletOut
                                        : transaction.walletIn,
                                });
                            }}
                            testID="addContactActionSheetButton"
                        >
                            {isIncomingTransaction ? "Add sender contact" : "Add recipient contact"}
                        </Link>
                    </Actionsheet.Item>
                </Actionsheet.Content>
            </Actionsheet>
...
