...
                <Switch
                    trackColor={{ false: "#787880", true: "#0077E6" }}
                    thumbColor={"#FFFFFF"}
                    onValueChange={toggleSwitch}
                    value={isEnabled}
                    style={{ marginLeft: "auto" }}
                    testID="toggleNotificationsSwitch"
                />
            </HStack>
        </View>
    );
}

...
